# flatpak-indexer

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Containerfile  LICENSE  MANIFEST.in  Pipfile  README.md  app.sh  brew.conf  config-direct.yaml  config-fedora.yaml  config-local.yaml  config-pyxis.yaml  config-redhat.yaml  koji.conf  pyproject.toml  setup.py
.s2i/: environment
differ/: Dockerfile
flatpak_indexer/: base_config.py  bodhi_change_monitor.py  bodhi_query.py  build_cache.py  cleaner.py  cli.py  config.py  delta_generator.py  differ.py  fedora_monitor.py  http_utils.py  indexer.py  json_model.py  koji_query.py  koji_utils.py  models.py  nvr.py  odcs_query.py  redis_utils.py  registry_client.py  registry_query.py  release_info.py  session.py  utils.py
frontend/: Dockerfile  frontend.conf
redis/: Dockerfile  docker-entrypoint.sh
tests/: bodhi.py  conftest.py  fedora_messaging.py  koji.py  pyxis.py  redis.py  registry.py  test_base_config.py  test_bodhi_change_monitor.py  test_bodhi_query.py  test_build_cache.py  test_cleaner.py  test_cli.py  test_config.py  test_delta_generator.py  test_differ.py  test_direct_updater.py  test_fedora_monitor.py  test_fedora_updater.py  test_http_utils.py  test_indexer.py  test_json_model.py  test_koji_query.py  test_koji_updater.py  test_koji_utils.py  test_models.py  test_nvr.py  test_odcs_query.py  test_pyxis_updater.py  test_redis_utils.py  test_registry_client.py  test_registry_query.py  test_utils.py  utils.py
tools/: build-frontend.sh  build-indexer.sh  build-redis.sh  create-test-data.py  download-it-cert.sh  generate-cert.sh  run-differ.sh  (+8 more)
(+22 files in other folders)
