[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flatpak-indexer"
version = "0.1"
description = "Service to index Flatpak containers"
authors = [
    {name = "Owen Taylor", email = "otaylor@redhat.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "click",
    "koji",
    "redis>=4.0.0",
    "pika",
    "requests",
    "PyYAML",
    "version_utils>=0.3.2",
    # Test requirements - listed in main dependencies to make the image
    # self-contained for testing.
    # 2.22.0 contains an accidental incompatibility with python < 3.11,
    # fixed in git.
    "fakeredis!=2.22.0",
    "graphql-core",
    "iso8601",
    "pytest",
    "pytest-cov",
    "pytest-socket",
    "responses",
    "www-authenticate",
]

[project.scripts]
flatpak-indexer = "flatpak_indexer.cli:cli"

[dependency-groups]
dev = [
    "pre-commit>=2.1.1",
    "pyright>=0.0.13.post0",
    "ruff",
]

[tool.setuptools.packages.find]
include = [
    "flatpak_indexer*",
]

[tool.setuptools.package-data]
flatpak_indexer = [
    "certs/*.cert",
    "certs/*.crt",
    "certs/.dummy",
    "messaging-certs/*.pem",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]
omit = ["flatpak_indexer/test/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
from-first = true

[tool.pytest]
addopts = [
    "--cov=flatpak_indexer",
    "--cov-report=term-missing",
    "--disable-socket"
]
testpaths = ["tests"]
